# rotex_core

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: cube.rs  headless.rs  triangle.rs  window.rs
src/: buffer.rs  command.rs  descriptor.rs  device.rs  error.rs  image.rs  lib.rs  pass.rs  swapchain.rs  sync.rs
src/graphics_pipeline/: mod.rs  pipeline.rs  state.rs  vertex.rs
