[package]
name = "rotex-core"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Core library for the Rotex Engine Development"
repository = "https://github.com/rotexengine/rotex-core"

[dependencies]
thiserror = "2.0.18"
raw-window-handle = "0.6.2"
rotex-types = { git = "https://github.com/rotexengine/rotex-types", branch = "staging" }

[build-dependencies]
shaderc = "0.10.1"

[dev-dependencies]
rfd = "0.17.2"
winit = "0.30.13"
pollster = "0.4.0"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rotex-vulkan = { git = "https://github.com/rotexengine/rotex-vulkan", branch = "staging" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ash-window = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rotex-wgpu = { git = "https://github.com/rotexengine/rotex-wgpu", branch = "staging" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = false
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release.package.'*']
opt-level = 3
